test/com/facebook/buck/parser/testdata/python_user_defined_rules/errors/invalid_attr_name/BUCK.fixture
load("//errors/invalid_attr_name:bad_attrs.bzl", "bad_attrs")

bad_attrs(name = "invalid_attr_name", **{"1234isntvalid": 1})
